text editor buttons no longer too wide

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -294,6 +294,10 @@ li.active>a{
   border-radius: 3px;
 }
 
+.btn-toolbar{
+  width: auto !important;
+}
+
 #btn-login{
   background-color: #6666cc;
   color: white;
